Added new function for OfferTransaction controller: findByCustAndTransType
