# api/swagger.yaml
@@ -1192,7 +1192,7 @@ paths:
       security:
       - basicAuth: []
       x-swagger-router-controller: notification.controller
-  /notification/deactivate:
+  /notification/deactivate: 
     delete:
       description: Deletes an existing notification
       operationId: deactivate
@@ -1436,6 +1436,36 @@ paths:
       security:
       - basicAuth: []
       x-swagger-router-controller: offer.transaction.controller
+  /offerTransaction/findByCustAndTransType:
+    get:
+      description: 'Get a list of a offer transactions by customer id and transaction type.
+        For example to get a list of challenges of earned points for a given customer,
+        supply the customer_id, 1234 and the transaction_type, [''EARNED'']'
+      operationId: findByCustAndTransType
+      parameters:
+        - $ref: '#/components/parameters/customerIdQueryParamGet'
+        - $ref: '#/components/parameters/offerTransTypeQueryParamGet'
+      responses:
+        200:
+          description: OK Offer Transaction Obtained
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OfferTransaction'
+                x-content-type: application/json
+        400:
+          description: 'Error: Bad Request'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+        404:
+          description: 'Error: Not Found'
+      security:
+      - basicAuth: []
+      x-swagger-router-controller: offer.transaction.controller
   /offerTransaction/challengeCustomer:
     post:
       description: 'Customer Challenges themselves to a new challenge. Requires customer_id and challenge_id'
@@ -1546,6 +1576,16 @@ components:
       explode: false
       schema:
         type: string
+    offerTransTypeQueryParamGet:
+      name: transaction_type
+      in: query
+      description: 'type of transaction EARNED, IN_PROGRESS, NOT_EARNED, REDEEMED'
+      required: true
+      style: simple
+      explode: false
+      schema:
+        type: array
+        items: {}
     customerIdParamDel:
       name: customer_id
       in: query
